--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>AAAah</title>
+    <title>Index</title>
 </head>
 <body>
     <h1>Aplicação no ar</h1>
