alterações nos estilos
- Arquivos de estilos adicionados na pasta resources/static

-Thymeleaf utilizado para linkar o estilo as páginas

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,22 +1,20 @@
-<<<<<<< Updated upstream
-<!DOCTYPE html>
-<html lang="en">
-=======
 <!DOCTYPE html >
 <html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
->>>>>>> Stashed changes
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
+    <link rel="shortcut icon" type="imagex/png" href="imgs/logo.png">
+
+    <link rel="stylesheet" href ="styles/principal-page.css">
 </head>
 <body>
-<<<<<<< Updated upstream
-    <h1>Aplicação no ar</h1>
-=======
 <header>
     <div class="container">
-        <img src="imgs/logo.png" alt="Logo do sistema">
-        <h1>Incruise</h1>
+        <div class="logo container">
+            <img class="logo" src="imgs/logo.png" alt="Logo do sistema">
+            <h1>Incruise</h1>
+            
+        </div>
         <div class="login-register">
             <a href="#">Login</a> | <a th:href="@{student/register}">Registrar</a>
         </div>
@@ -45,6 +43,5 @@
         <p>Copyright &copy; 2024 - Incruise</p>
     </div>
 </footer>
->>>>>>> Stashed changes
 </body>
 </html>
